# smart-cart-v3

./: .gitignore  README.md  REPORT.txt  components.txt  kiosk_kill.sh  kiosk_relaunch.sh  launch_kiosk.sh  pyproject.toml  setup_pi.sh  smartcart.db
